testdata/bad/blob_12.ion
// Unneccessary pad characters
{{ YSBiIGMgZCBlIGYgZyBoIGkgaiBrIGwgbSBuIG8gcCBxIHIgcyB0IHUgdiB3IHggeSB6=== }}
